# delorean

./: .envrc  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  access_qlib_etf_data.py  analysis.py  backtest.py  best_params.json  check_benchmark.py  check_qlib_alpha.py  constants.py  crontab  data.py  docker-compose.yml  download_etf_data_to_csv.py  environment.yml  etf_analyzer.py  etf_strategy.py  gemini.md  model.py  pyproject.toml  qlib_etf_preprocessing.py  requirements.txt  run_daily_task.py  run_etf_analysis.py  run_live_trading.py  workflow_live_trading.md
delorean/: analysis.py  backtest.py  config.py  data.py  experiment_manager.py  feature_selection.py  model.py  pipeline.py  regime.py  runner.py  signals.py  utils.py  walk_forward.py
docs/: architecture.md
frontend/: package-lock.json  package.json
logs/: audit_2020_2023.txt  audit_2024.txt  audit_cleaned.txt  check_values.txt  debug_model.txt  debug_model_v2.txt  debug_model_v3.txt  debug_model_v4.txt  factor_audit.txt  mlflow_inspection.txt
scripts/: audit_factors.py  audit_factors_enhanced.py  audit_yearly.py  check_benchmark.py  check_qlib_alpha.py  check_stability.py  check_values.py  cleanup_mlruns.py  debug_factor.py  debug_mining.py  debug_model.py  download_etf_data_to_csv.py  generate_historical_recommendations.py  inspect_mlruns.py  investigate_overfitting.py  mine_alphas.py  mine_alphas_round2.py  mine_alphas_round3.py  mine_factors.py  mine_new_alphas.py  run_backtest.py  run_daily_task.py  run_etf_analysis.py  run_live_trading.py  test_defensive_factors.py  tune_model.py  (+5 more)
(+90 files in other folders)
