[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "delorean"
version = "0.0.1"
description = "A project for quantitative financial analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqlib==0.9.7",
    "akshare",
    "pandas>=2.0.0",
    "numpy<2.0.0",
    "lightgbm",
    "torch",
    "gymnasium",
    "fastapi",
    "uvicorn",
    "mlflow",
    "scikit-learn",
    "matplotlib",
    "gplearn",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/user/delorean"
